# yet_another_ai_bot

./: .dockerignore  .example.env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 191cf28f7756_init.py  4ba0346d7e2d_remove_category_model.py  a1b2c3d4e5f6_add_user_premium.py
bot/handlers/private/: user.py
core/: config.py  database.py  dependencies.py  settings.py
core/models/: base.py
core/services/: nodes.py
core/services/graphs/: simple.py
filters/: chat_type.py  is_admin.py
handlers/: admin.py  user.py
keyboards/: admin.py  user.py
middlewares/: media_group.py  outer.py
models/: __init__.py  aimodel.py  base.py  conversation.py  message.py  user.py
services/: admin.py  ai.py  chat.py  graph.py  memory.py  openai_media.py  telegram_media.py
states/: user.py
static/: categories.py  prompts.py  texts.py
