[project]
name = "yaai-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "httpx>=0.28.0",
    "celery>=5.6.2",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "langchain-postgres>=0.0.16",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "mempalace>=3.5.0",
]
